--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
   "name": "js-timer",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "^1.1.4"
+    "react-scripts": "^2.1.3"
   },
   "dependencies": {
-    "antd": "^3.4.1",
+    "antd": "^3.13.2",
     "cycle-react": "^6.0.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "rxjs": "^5.5.10"
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "rxjs": "^5.5.12"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
